change pom